@@ -30,6 +30,7 @@ import static java.net.HttpURLConnection.HTTP_FORBIDDEN;
 import static java.net.HttpURLConnection.HTTP_INTERNAL_ERROR;
 import static java.net.HttpURLConnection.HTTP_NO_CONTENT;
 import static java.net.HttpURLConnection.HTTP_OK;
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.util.concurrent.TimeUnit.SECONDS;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.instanceOf;
@@ -141,7 +142,7 @@ public class StyxOkHttpClientTest {
   @Mock FutureOkHttpClient client;
   @Mock GoogleIdTokenAuth auth;
 
-  StyxClient styx;
+  private StyxClient styx;
 
   @Captor ArgumentCaptor<Request> requestCaptor;
 
@@ -211,7 +212,8 @@ public class StyxOkHttpClientTest {
 
   @Test
   public void shouldGetBackfills() throws Exception {
-    final BackfillsPayload payload = BackfillsPayload.create(Arrays.asList(BackfillPayload.create(BACKFILL, Optional.empty())));
+    final BackfillsPayload payload = BackfillsPayload.create(
+        List.of(BackfillPayload.create(BACKFILL, Optional.empty())));
     when(client.send(any(Request.class)))
         .thenReturn(CompletableFuture.completedFuture(response(HTTP_OK, payload)));
     final CompletableFuture<BackfillsPayload> r =
@@ -226,7 +228,7 @@ public class StyxOkHttpClientTest {
   }
 
   @Test
-  public void shouldHaltBackfill() throws Exception {
+  public void shouldHaltBackfill() {
     when(client.send(any(Request.class)))
         .thenReturn(CompletableFuture.completedFuture(response(HTTP_OK)));
     final CompletableFuture<Void> r =
@@ -353,7 +355,7 @@ public class StyxOkHttpClientTest {
 
   @Test
   public void shouldGetEventsForWorkflowInstance() throws Exception {
-    final EventsPayload events = EventsPayload.create(Arrays.asList(
+    final EventsPayload events = EventsPayload.create(List.of(
         EventsPayload.TimestampedEvent
             .create(Event.stop(WorkflowInstance.create(WORKFLOW_1.id(), "foo")), 123)));
     when(client.send(any(Request.class)))
@@ -366,13 +368,14 @@ public class StyxOkHttpClientTest {
     final URI uri = URI.create(API_URL + "/status/events/component/workflow/2017-01-01T00");
     assertThat(request.url().toString(), is(uri.toString()));
     assertThat(request.method(), is("GET"));
-    assertThat(r.join(), is(Arrays.asList(EventInfo.create(123, "stop", ""))));
+    assertThat(r.join(), is(List.of(EventInfo.create(123, "stop", ""))));
   }
 
   @Test
-  public void shouldFailWithBadEventJson() throws Exception {
+  public void shouldFailWithBadEventJson() {
     when(client.send(any(Request.class)))
-        .thenReturn(CompletableFuture.completedFuture(responseBuilder(HTTP_OK).body(ResponseBody.create(APPLICATION_JSON, "{invalid json is invalid".getBytes())).build()));
+        .thenReturn(CompletableFuture.completedFuture(responseBuilder(HTTP_OK)
+            .body(ResponseBody.create(APPLICATION_JSON, "{invalid json is invalid".getBytes(UTF_8))).build()));
     final CompletableFuture<List<EventInfo>> r =
         styx.eventsForWorkflowInstance("component", "workflow", "2017-01-01T00").toCompletableFuture();
     verify(client, timeout(30_000)).send(requestCaptor.capture());
@@ -388,14 +391,14 @@ public class StyxOkHttpClientTest {
 
   @Test
   public void shouldWorkWithUnknownEvents() throws Exception {
-    final EventsPayload events = EventsPayload.create(Arrays.asList(
+    final EventsPayload events = EventsPayload.create(List.of(
         EventsPayload.TimestampedEvent
             .create(Event.stop(WorkflowInstance.create(WORKFLOW_1.id(), "foo")), 123)));
     final String badJson = Json.serialize(events).utf8().replace("stop", "stahp");
     when(client.send(any(Request.class)))
         .thenReturn(CompletableFuture.completedFuture(
             responseBuilder(HTTP_OK).body(
-                ResponseBody.create(APPLICATION_JSON, badJson.getBytes()))
+                ResponseBody.create(APPLICATION_JSON, badJson.getBytes(UTF_8)))
                 .build()));
     final CompletableFuture<List<EventInfo>> r =
         styx.eventsForWorkflowInstance("component", "workflow", "2017-01-01T00").toCompletableFuture();
@@ -405,12 +408,12 @@ public class StyxOkHttpClientTest {
     final URI uri = URI.create(API_URL + "/status/events/component/workflow/2017-01-01T00");
     assertThat(request.url().toString(), is(uri.toString()));
     assertThat(request.method(), is("GET"));
-    assertThat(r.join(), is(Arrays.asList(EventInfo.create(123, "stahp", ""))));
+    assertThat(r.join(), is(List.of(EventInfo.create(123, "stahp", ""))));
   }
 
   @Test
   public void shouldGetActiveStatesForComponent() throws Exception {
-    final RunStateDataPayload runStateDataPayload = RunStateDataPayload.create(Arrays.asList());
+    final RunStateDataPayload runStateDataPayload = RunStateDataPayload.create(List.of());
     when(client.send(any(Request.class)))
         .thenReturn(CompletableFuture.completedFuture(response(HTTP_OK, runStateDataPayload)));
     final CompletableFuture<RunStateDataPayload> r =
@@ -465,9 +468,10 @@ public class StyxOkHttpClientTest {
   public void componentAndWorkflowAreEncoded() {
     when(client.send(any(Request.class))).thenReturn(
         CompletableFuture.completedFuture(response(HTTP_OK)));
-    styx.workflow("f[ ]o-cmp", "bar-w[f]")
+    final CompletableFuture<Workflow> r = styx.workflow("f[ ]o-cmp", "bar-w[f]")
         .toCompletableFuture();
     verify(client, timeout(30_000)).send(requestCaptor.capture());
+    assertThat(r.isDone(), is(true));
     final Request request = requestCaptor.getValue();
     final URI uri = URI.create(
         API_URL + "/workflows/f%5B%20%5Do-cmp/bar-w%5Bf%5D");
